@@ -2,12 +2,20 @@
 \name{NEWS}
 \title{NEWS file for the \pkg{tbm} package}
 
+\section{Changes in Version 0.3-2 (2019-12-11)}{
+  \itemize{
+    \item Fix noLD problem in tests.
+    }
+}
+
+
 \section{Changes in Version 0.3-1 (2019-10-04)}{
   \itemize{
     \item Re-write \code{stmboost} using the new \code{resid}
           method in \pkg{mlt}; this results in faster and simpler code.
     }
 }
+
 
 \section{Changes in Version 0.3-0 (2019-04-03)}{
   \itemize{
